dynamix/force-app/main/default/objects/communicat_o__Communication_Channel__mdt/communicat_o__Communication_Channel__mdt.object-meta.xml
<CustomObject>
    <description>Multiple channels for a single provider, as if we want to communicate with multiple fb pages etc.</description>
    <label>Communication Channel</label>
    <pluralLabel>Communication Channels</pluralLabel>
</CustomObject>