dynamix/force-app/main/default/objects/communicat_o__Communication_Channel__mdt/fields/communicat_o__ChannelId__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__ChannelId__c</fullName>
    <description>Channel Id can be unique identifier, such id for facebook, and phone number for sms etc.</description>
    <inlineHelpText>Enter PageID for FB, Phone Number for SMS</inlineHelpText>
    <label>ChannelId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>