dynamix/force-app/main/default/objects/communicat_o__Communication_Channel__mdt/fields/communicat_o__Communication_Provider__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Communication_Provider__c</fullName>
    <label>Communication Provider</label>
    <referenceTo>communicat_o__API_Configuration__mdt</referenceTo>
    <relationshipLabel>Communication Channels</relationshipLabel>
    <relationshipName>Communication_Channels</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>