dynamix/force-app/main/default/objects/communicat_o__Communication_Channel__mdt/fields/communicat_o__Default_Owner__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Default_Owner__c</fullName>
    <label>Default Owner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>