dynamix/force-app/main/default/objects/communicat_o__Communication_Channel__mdt/fields/communicat_o__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Named_Credential__c</fullName>
    <label>Named Credential</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>