dynamix/force-app/main/default/objects/communicat_o__Communication_Channel__mdt/fields/communicat_o__Route_Id__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Route_Id__c</fullName>
    <label>Route Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>