dynamix/force-app/main/default/objects/communicat_o__Communication_Channel__mdt/fields/communicat_o__Route_Type__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Route_Type__c</fullName>
    <label>Route Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>