dynamix/force-app/main/default/objects/communicat_o__Communication_Channel__mdt/listViews/communicat_o__All.listView-meta.xml
<ListView>
    <fullName>communicat_o__All</fullName>
    <columns>MasterLabel</columns>
    <columns>communicat_o__Communication_Provider__c</columns>
    <columns>communicat_o__ChannelId__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>